force-app/main/default/objects/Patient_Intake__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Intakes</relationshipLabel>
    <relationshipName>Patient_Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>