force-app/main/default/objects/Patient_Intake__c/fields/Member_Id_number__c.field-meta.xml
<CustomField>
    <fullName>Member_Id_number__c</fullName>
    <externalId>true</externalId>
    <label>Member Id number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>