force-app/main/default/objects/Patient_Intake__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <label>Phone No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>