force-app/main/default/objects/Patient_Intake__c/fields/Relation_to_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_Subscriber__c</fullName>
    <label>Relation to Subscriber</label>
    <length>80</length>
    <type>Text</type>
</CustomField>