force-app/main/default/objects/Patient_Intake__c/fields/Visit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Visit_Reason__c</fullName>
    <label>Visit Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>