force-app/main/default/objects/Patient_Intake__c/fields/Visit_type__c.field-meta.xml
<CustomField>
    <fullName>Visit_type__c</fullName>
    <label>Visit type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>